--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-PHP script to crawl specific domain websites or several domains recursively for user specified data
+PHP script to crawl a specific website, domain or several domains recursively for user specified data.
 
-Currently crawls for e-mail addresses on one chosen domain only.
+Currently crawls for e-mail addresses only, but more content types will be added later on.
